lib is not optional, so don't pretend it is
Signed-off-by: Andreas Sturmlechner <asturm@gentoo.org>

--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -1,5 +1,5 @@
 # kateprivate shared library used by Kate & KWrite (and addons)
-ecm_optional_add_subdirectory(lib)
+add_subdirectory(lib)
 
 # the Kate application
 ecm_optional_add_subdirectory(kate)
