Add option to -DBUILD_SPLIT_FROM_SOURCE
This will enable source-based distributions like Gentoo to keep split
kate/kwrite packaging not conflicting with one another by not
requiring to install a duplicate kateprivate lib.

Signed-off-by: Andreas Sturmlechner <asturm@gentoo.org>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,11 @@ include(ECMDeprecationSettings)
 
 include(FeatureSummary)
 
+option(BUILD_SPLIT_FROM_SOURCE "This will build kateprivate as a static library" OFF)
+set(KATEPRIVATE_LIB_MODE "SHARED")
+if(BUILD_SPLIT_FROM_SOURCE)
+    set(KATEPRIVATE_LIB_MODE "STATIC")
+endif()
 
 ecm_set_disabled_deprecation_versions(
     QT 5.15
