--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,6 +30,7 @@ craft_nightly_windows_qt515:
     # Make sure NSIS is installed (TODO: Pre-install nsis in the Docker image)
     - python craftmaster/Craftmaster.py --config "${CRAFTMASTER_CONFIG}" --target ${CRAFT_PLATFORM} -c ${CRAFT_OPTIONS} nsis
     # Make sure the build environment for this application is clean
+    - echo python craftmaster/Craftmaster.py --config "${CRAFTMASTER_CONFIG}" --target ${CRAFT_PLATFORM} -c ${CRAFT_OPTIONS} ${CRAFT_PROJECT_PARAMS} --unmerge ${CRAFT_BUILD_BLUEPRINT} ${CRAFT_REBUILD_BLUEPRINT}
     - python craftmaster/Craftmaster.py --config "${CRAFTMASTER_CONFIG}" --target ${CRAFT_PLATFORM} -c ${CRAFT_OPTIONS} ${CRAFT_PROJECT_PARAMS} --unmerge ${CRAFT_BUILD_BLUEPRINT} ${CRAFT_REBUILD_BLUEPRINT}
   script:
     - cd "$CRAFT_BASE"
