--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,6 +19,7 @@
     CRAFT_BASE: "C:/Craft"
     CRAFT_PLATFORM: windows-msvc2019_64-cl
     CRAFT_BUILD_BLUEPRINT: ${CI_PROJECT_NAME}
+    CRAFT_PROJECT_PARAMS: --target ${CI_COMMIT_REF_NAME}
     CRAFTMASTER_CONFIG: bf-tooling/craft/configs/master/CraftBinaryCache.ini
   interruptible: true
   before_script:
@@ -50,5 +51,4 @@ craft_nightly_windows_qt515:
   extends: .craft_build_windows_qt515
   variables:
     CRAFT_BUILD_TYPE: Nightly
-    CRAFT_PROJECT_PARAMS: --target master
 
