Switch to the new Docker image

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@
 
 .craft_build_windows_qt515:
   stage: deploy
-  image: kdeorg/ci-windows-qt515:latest
+  image: kdeorg/windows-msvc2019-kf5:latest
   tags:
     - Windows
   variables:
