Copy only specific artifacts

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -87,8 +87,13 @@ craft_windows_x86_64:
     - python craftmaster/Craftmaster.py --config $env:KDECI_CRAFT_CONFIG --target $env:KDECI_CRAFT_PLATFORM -c --package --options "[Packager]PackageType=AppxPackager" --target master --src-dir $env:CI_PROJECT_DIR/src/ $env:CI_PROJECT_NAME
     # Save our package
     - $packageDir=python craftmaster/CraftMaster.py --config $env:KDECI_CRAFT_CONFIG --target $env:KDECI_CRAFT_PLATFORM -c -q --get "packageDestinationDir()" virtual/base
-    - mkdir $env:CI_PROJECT_DIR/.kde-ci-packages/
-    - Copy-Item $packageDir/* -Destination $env:CI_PROJECT_DIR/.kde-ci-packages/ -Recurse
+    - mkdir $env:CI_PROJECT_DIR/.kde-ci-packages
+    - cd $env:CI_PROJECT_DIR/.kde-ci-packages
+    - echo "Files that will be copied:"
+    - (Get-ChildItem -Path $packageDir -Recurse -Include *.appx, *.appxupload, *.exe, *.7z, *.sha256).FullName
+    - Get-ChildItem -Path $packageDir -Recurse -Include *.appx, *.appxupload, *.exe, *.7z, *.sha256 | Copy-Item
+    - echo "Copied files:"
+    - (Get-ChildItem -Recurse).FullName
   artifacts:
     expire_in: 3 days
     when: on_success
