--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -100,3 +100,25 @@ craft_windows_x86_64:
     expose_as: "Windows"
     paths:
      - ".kde-ci-packages/"
+
+craft_playground:
+  stage: deploy
+  when: manual
+  image: kdeorg/windows-msvc2019-qt515:latest
+  tags:
+    - Windows
+  variables:
+    PYTHONUTF8: 1
+    GIT_STRATEGY: none
+    KDECI_CRAFT_PLATFORM: windows-msvc2019_64-cl
+    KDECI_CRAFT_CACHE: C:/Gitlab/Craft/download/
+    KDECI_CRAFT_CONFIG: ci-utilities/resources/CraftConfig.ini
+  interruptible: true
+  before_script:
+    - git clone $env:CI_REPOSITORY_URL --branch=$env:CI_COMMIT_REF_NAME src/
+    - cd C:\Gitlab\Craft\
+    - Get-ChildItem C:\Gitlab\Craft\ | Remove-Item -Recurse -Force
+    - git clone https://invent.kde.org/packaging/craftmaster --branch=master
+    - git clone https://invent.kde.org/sysadmin/ci-utilities
+  script:
+    - craftmaster/CraftMaster.py --config $env:KDECI_CRAFT_CONFIG --config-override src/craft.ini --target $env:KDECI_CRAFT_PLATFORM -c --get "packageAppx" $env:CI_PROJECT_NAME
