Fix location of craft.ini in command line

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -121,4 +121,4 @@ craft_playground:
     - git clone https://invent.kde.org/packaging/craftmaster --branch=master
     - git clone https://invent.kde.org/sysadmin/ci-utilities
   script:
-    - craftmaster/CraftMaster.py --config $env:KDECI_CRAFT_CONFIG --config-override src/craft.ini --target $env:KDECI_CRAFT_PLATFORM -c --get "packageAppx" $env:CI_PROJECT_NAME
+    - craftmaster/CraftMaster.py --config $env:KDECI_CRAFT_CONFIG --config-override $env:CI_PROJECT_DIR/src/craft.ini --target $env:KDECI_CRAFT_PLATFORM -c --get "packageAppx" $env:CI_PROJECT_NAME
